// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delta:methods Build Delta Order 1`] = `
{
  "data": {
    "beneficiary": "0xaC39b311DCEb2A4b2f5d8461c1cdaF756F4F7Ae9",
    "deadline": NaN,
    "destAmount": "3147447403157656698880",
    "destToken": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
    "expectedDestAmount": "3163263721766488892666",
    "nonce": "dynamic_number",
    "owner": "0xaC39b311DCEb2A4b2f5d8461c1cdaF756F4F7Ae9",
    "partnerAndFee": "0",
    "permit": "0x",
    "srcAmount": "1000000000000000000",
    "srcToken": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
  },
  "domain": {
    "chainId": 1,
    "name": "Portikus",
    "verifyingContract": "0x0000000000bbf5c5fd284e657f01bd000933c96d",
    "version": "2.0.0",
  },
  "types": {
    "Order": [
      {
        "name": "owner",
        "type": "address",
      },
      {
        "name": "beneficiary",
        "type": "address",
      },
      {
        "name": "srcToken",
        "type": "address",
      },
      {
        "name": "destToken",
        "type": "address",
      },
      {
        "name": "srcAmount",
        "type": "uint256",
      },
      {
        "name": "destAmount",
        "type": "uint256",
      },
      {
        "name": "expectedDestAmount",
        "type": "uint256",
      },
      {
        "name": "deadline",
        "type": "uint256",
      },
      {
        "name": "nonce",
        "type": "uint256",
      },
      {
        "name": "partnerAndFee",
        "type": "uint256",
      },
      {
        "name": "permit",
        "type": "bytes",
      },
    ],
  },
}
`;

exports[`Delta:methods Get Delta Order by Id 1`] = `
{
  "chainId": 1,
  "createdAt": "2024-10-18T14:44:03.502Z",
  "expiresAt": "2024-10-18T15:43:16.000Z",
  "id": "50950528-d362-4359-a89e-ed6e49be1a20",
  "order": {
    "beneficiary": "0x76176c2971300217e9f48e3dd4e40591500b96ff",
    "deadline": 1729266196,
    "destAmount": "2950666627548284",
    "destToken": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
    "nonce": 1729262634617,
    "owner": "0x76176c2971300217e9f48e3dd4e40591500b96ff",
    "permit": "0x",
    "srcAmount": "40000000000000000000",
    "srcToken": "0x6b175474e89094c44da98b954eedeac495271d0f",
  },
  "orderHash": null,
  "partiallyFillable": false,
  "partner": "delta-paraswap.io-local",
  "receivedAmount": null,
  "status": "FAILED",
  "transaction": null,
  "transactions": [],
  "updatedAt": "2024-10-18T14:44:08.895Z",
  "user": "0x76176c2971300217e9f48e3dd4e40591500b96ff",
}
`;

exports[`Delta:methods Get Delta Orders for user 1`] = `
[
  {
    "chainId": 1,
    "createdAt": "2024-10-10T16:18:04.727Z",
    "expiresAt": "2024-10-10T17:17:47.000Z",
    "id": "8515cce6-c7c6-486b-9f1e-5702f204edd6",
    "order": {
      "beneficiary": "0x76176c2971300217e9f48e3dd4e40591500b96ff",
      "deadline": 1728580667,
      "destAmount": "11302885800000000000",
      "destToken": "0x6b175474e89094c44da98b954eedeac495271d0f",
      "nonce": 1728577074265,
      "owner": "0x76176c2971300217e9f48e3dd4e40591500b96ff",
      "permit": "0x00000000000000000000000076176c2971300217e9f48e3dd4e40591500b96ff00000000000000000000000036ff475499e928590659d5b8aa3a34330a583fd900000000000000000000000000000000000000000000000000000000019d278900000000000000000000000000000000000000000000000000000000670bf2ae000000000000000000000000000000000000000000000000000000000000001bf548be9f97f37f0b2ab285bba67c8fdab99c3a08b0fdc0a910267988485535945df93e27958867f1d479c7b7783e98ba586629407e44f8d5c5d4115a7298dca9",
      "srcAmount": "27076489",
      "srcToken": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    },
    "orderHash": null,
    "partiallyFillable": false,
    "partner": "delta-paraswap.io-local",
    "receivedAmount": "17225367867506356154",
    "status": "EXECUTED",
    "transaction": {
      "blobGasPrice": null,
      "blobGasUsed": null,
      "blockHash": "0x21425d0c3625d5e55061ba2fd8ce91621dbee52c7d2846b76dd897d3438a6893",
      "blockNumber": 20936359,
      "contractAddress": null,
      "cumulativeGasUsed": "8881978",
      "from": "0x2e5eF37Ade8afb712B8Be858fEc7389Fe32857e2",
      "gasPrice": "23525770029",
      "gasUsed": "597540",
      "hash": "0x3e5040d187288848ca57e4423d60fd31922b6db7fe636580d96200b03a8a8d8f",
      "index": 57,
      "status": 1,
      "to": "0x1D7405DF25FD2fe80390DA3A696dcFd5120cA9Ce",
    },
    "transactions": [],
    "updatedAt": "2024-10-10T16:18:51.447Z",
    "user": "0x76176c2971300217e9f48e3dd4e40591500b96ff",
  },
  {
    "chainId": 1,
    "createdAt": "2024-10-09T16:52:18.826Z",
    "expiresAt": "2024-10-09T17:52:08.000Z",
    "id": "7696f983-4f0d-4bb0-b591-61957abf74de",
    "order": {
      "beneficiary": "0x76176c2971300217e9f48e3dd4e40591500b96ff",
      "deadline": 1728496328,
      "destAmount": "736681085000000000000",
      "destToken": "0xcafe001067cdef266afb7eb5a286dcfd277f3de5",
      "nonce": 1728492729603,
      "owner": "0x76176c2971300217e9f48e3dd4e40591500b96ff",
      "permit": "0x",
      "srcAmount": "21000000000000000",
      "srcToken": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
    },
    "orderHash": null,
    "partiallyFillable": false,
    "partner": "delta-paraswap.io-local",
    "receivedAmount": "1635237633557152096036",
    "status": "EXECUTED",
    "transaction": {
      "blobGasPrice": null,
      "blobGasUsed": null,
      "blockHash": "0x58dbd72e843c1224e8113694b8b4a37e29657f0d52634c0f3f89835a3c7a7187",
      "blockNumber": 20929352,
      "contractAddress": null,
      "cumulativeGasUsed": "19979608",
      "from": "0x2e5eF37Ade8afb712B8Be858fEc7389Fe32857e2",
      "gasPrice": "47757958240",
      "gasUsed": "224182",
      "hash": "0x6d5fa34f4723283dc32496acb8b8faf4bb9e713e3a9d43152ebef7d842c59700",
      "index": 188,
      "status": 1,
      "to": "0x1D7405DF25FD2fe80390DA3A696dcFd5120cA9Ce",
    },
    "transactions": [],
    "updatedAt": "2024-10-09T16:52:37.585Z",
    "user": "0x76176c2971300217e9f48e3dd4e40591500b96ff",
  },
]
`;

exports[`Delta:methods Get Delta Price 1`] = `
{
  "destAmount": "dynamic_number",
  "destAmountBeforeFee": "dynamic_number",
  "destToken": "0x6b175474e89094c44da98b954eedeac495271d0f",
  "destUSD": "dynamic_number",
  "destUSDBeforeFee": "dynamic_number",
  "gasCost": "dynamic_number",
  "gasCostBeforeFee": "dynamic_number",
  "gasCostUSD": "dynamic_number",
  "gasCostUSDBeforeFee": "dynamic_number",
  "partner": "anon",
  "partnerFee": 0,
  "srcAmount": "1000000000000000000",
  "srcToken": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
  "srcUSD": "dynamic_number",
}
`;

exports[`Delta:methods Submit(=build+sign+post) Delta Order 1`] = `
{
  "beneficiary": "0xaC39b311DCEb2A4b2f5d8461c1cdaF756F4F7Ae9",
  "deadline": NaN,
  "destAmount": "3147447403157656698880",
  "destToken": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
  "expectedDestAmount": "3163263721766488892666",
  "nonce": "dynamic_number",
  "owner": "0xaC39b311DCEb2A4b2f5d8461c1cdaF756F4F7Ae9",
  "partnerAndFee": "0",
  "permit": "0x",
  "srcAmount": "1000000000000000000",
  "srcToken": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
}
`;
